feat(project) - project endpoints
