# src/controllers/project-controller.ts
@@ -14,7 +14,8 @@ import {
   SuccessResponse,
 } from 'tsoa';
 
-import {ProjectAttr} from '../@types/entities';
+import {ProjectAttr, TransactionAttr} from '../@types/entities';
+import {DisburseProjectFund} from '../@types/models';
 import {VERBIAGE} from '../constants';
 import {ApiError, EntityError} from '../errors';
 import ProjectService from '../services/project-service';
@@ -33,6 +34,18 @@ export class ProjectController extends Controller {
   @Get('/getAll')
   public async getAll(@Query() search?: string) {
     const result = await this.projectService.getAll(search);
+    return result;
+  }
+
+  @Get('/getProjectVouchers/{id}')
+  public async getProjectVouchers(@Path() id: number) {
+    const result = await this.projectService.getVouchers(id);
+    return result;
+  }
+
+  @Get('/getProjectTransactions/{id}')
+  public async getProjectTransactions(@Path() id: number) {
+    const result = await this.projectService.getTransactions(id);
     return result;
   }
 
@@ -65,6 +78,40 @@ export class ProjectController extends Controller {
         throw new EntityError(e);
       }
       throw new ApiError(404, VERBIAGE.NOT_FOUND);
+    }
+  }
+
+  @Response<EntityError>(400, VERBIAGE.BAD_REQUEST)
+  @SuccessResponse(201, VERBIAGE.CREATED)
+  @Post('/disburseProjectFund/{id}')
+  public async disburseProjectFund(
+    @Path() id: number,
+    @Body() data: DisburseProjectFund
+  ) {
+    try {
+      await this.projectService.disburseFund(id, data);
+    } catch (e) {
+      if (e instanceof ValidationError) {
+        throw new EntityError(e);
+      }
+      throw e;
+    }
+  }
+
+  @Response<EntityError>(400, VERBIAGE.BAD_REQUEST)
+  @SuccessResponse(201, VERBIAGE.CREATED)
+  @Post('/depositProjectFund/{id}')
+  public async depositProjectFund(
+    @Path() id: number,
+    @Body() data: TransactionAttr
+  ) {
+    try {
+      await this.projectService.depositFund(id, data);
+    } catch (e) {
+      if (e instanceof ValidationError) {
+        throw new EntityError(e);
+      }
+      throw e;
     }
   }
 }
