# src/swagger.json
@@ -275,6 +275,205 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ProfileAttr": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"mobileNumber": {
+						"type": "string"
+					},
+					"type": {
+						"$ref": "#/components/schemas/ProfileType"
+					},
+					"status": {
+						"$ref": "#/components/schemas/RecordStatus"
+					},
+					"scopes": {
+						"type": "string"
+					},
+					"remarks": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"username",
+					"password",
+					"email",
+					"type",
+					"status"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"VoucherAttr": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"series": {
+						"type": "string"
+					},
+					"projectId": {
+						"type": "number",
+						"format": "double"
+					},
+					"description": {
+						"type": "string"
+					},
+					"totalCost": {
+						"type": "number",
+						"format": "double"
+					},
+					"remarks": {
+						"type": "string"
+					},
+					"closed": {
+						"type": "boolean"
+					},
+					"processedBy": {
+						"type": "number",
+						"format": "double"
+					},
+					"processedByProfile": {
+						"$ref": "#/components/schemas/ProfileAttr"
+					}
+				},
+				"required": [
+					"series",
+					"projectId",
+					"description",
+					"totalCost",
+					"processedBy"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"TransactionType": {
+				"type": "string",
+				"enum": [
+					"cash",
+					"check"
+				]
+			},
+			"TransactionAttr": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"accountId": {
+						"type": "number",
+						"format": "double"
+					},
+					"projectId": {
+						"type": "number",
+						"format": "double"
+					},
+					"voucherId": {
+						"type": "number",
+						"format": "double"
+					},
+					"transactionType": {
+						"$ref": "#/components/schemas/TransactionType"
+					},
+					"details": {
+						"type": "string"
+					},
+					"checkNumber": {
+						"type": "string"
+					},
+					"checkPostingDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"checkIssuingBank": {
+						"type": "string"
+					},
+					"amount": {
+						"type": "number",
+						"format": "double"
+					},
+					"processedBy": {
+						"type": "number",
+						"format": "double"
+					},
+					"processedByProfile": {
+						"$ref": "#/components/schemas/ProfileAttr"
+					}
+				},
+				"required": [
+					"accountId",
+					"transactionType",
+					"details",
+					"amount",
+					"processedBy"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DisburseProjectFund": {
+				"properties": {
+					"remarks": {
+						"type": "string"
+					},
+					"amount": {
+						"type": "number",
+						"format": "double"
+					},
+					"checkIssuingBank": {
+						"type": "string"
+					},
+					"checkPostingDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"checkNumber": {
+						"type": "string"
+					},
+					"transactionType": {
+						"$ref": "#/components/schemas/TransactionType"
+					},
+					"series": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"processedBy": {
+						"type": "number",
+						"format": "double"
+					},
+					"accountId": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"amount",
+					"transactionType",
+					"series",
+					"description",
+					"processedBy",
+					"accountId"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {
@@ -766,6 +965,78 @@
 				]
 			}
 		},
+		"/api/project/getProjectVouchers/{id}": {
+			"get": {
+				"operationId": "GetProjectVouchers",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/VoucherAttr"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/api/project/getProjectTransactions/{id}": {
+			"get": {
+				"operationId": "GetProjectTransactions",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/TransactionAttr"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/api/project/createProject": {
 			"post": {
 				"operationId": "CreateProject",
@@ -866,6 +1137,98 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/ProjectAttr"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/project/disburseProjectFund/{id}": {
+			"post": {
+				"operationId": "DisburseProjectFund",
+				"responses": {
+					"201": {
+						"description": "created"
+					},
+					"400": {
+						"description": "bad request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/EntityError"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DisburseProjectFund"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/project/depositProjectFund/{id}": {
+			"post": {
+				"operationId": "DepositProjectFund",
+				"responses": {
+					"201": {
+						"description": "created"
+					},
+					"400": {
+						"description": "bad request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/EntityError"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TransactionAttr"
 							}
 						}
 					}
